--- a/contactfr.html
+++ b/contactfr.html
@@ -1,4 +1,4 @@
- <style>
+<style>
 body{margin:0;padding:0}
 #ss-form input:focus ~ label,
 #ss-form textarea:focus ~ label,
@@ -137,7 +137,6 @@ body{margin:0;padding:0}
 }
 }
 </style>
-
 <script type="text/javascript">
 var submitted=false;
 var fadeEffect=function(){
@@ -165,7 +164,7 @@ var fadeEffect=function(){
 function myFunction() {
     location.reload();
 }
-<iframe name="iframe_uexxnchh" id="iframe_uexxnchh" onload="if(typeof sent_uexxnchh!='undefined'){window.location='http://www.bangfathur.net/p/thanks.html';}"></iframe>
+<iframe name="iframe_uexxnchh" id="iframe_uexxnchh" onload="if(typeof sent_uexxnchh!='undefined'){window.location=http://www.bangfathur.net/p/thanks.html}"></iframe>
 <form action="https://docs.google.com/forms/d/1S5n5cgqOkK0xMY05MxAfCZJ2bBrHr94McdGS3jCVYlU/formResponse" method="POST" id="ss-form" target="iframe_uexxnchh" onsubmit="sent_uexxnchh=true">
 <div class="styled-input">
                         <div class="styled-input-in">
